--- a/src/main/webapp/templates/header.xhtml
+++ b/src/main/webapp/templates/header.xhtml
@@ -4,19 +4,19 @@
 	  <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">!Flores que anamoranÂ¡</a>
+        <a class="navbar-brand" href="index.xhtml">!Flores que anamoran¡</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Inicio
+              <a class="nav-link" href="index.xhtml">Inicio
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="publico/productos.xhtml">Productos</a>
+              <a class="nav-link" href="productos.xhtml">Productos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="login.xhtml">Ingresar</a>
