--- a/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
@@ -3,14 +3,16 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"   
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      >
+          
+      xmlns:p="http://primefaces.org/ui">
     <body>
         <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
                         xmlns:f="http://java.sun.com/jsf/core">
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="index.xhtml">!Flores que anamoran¡</a>
+                     <p:link class="navbar-brand" outcome="index" value="!Flores que anamoran¡"></p:link>
+                    
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -22,16 +24,20 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="productos.xhtml">Productos</a>
+                                <p:link class="nav-link" outcome="productos" value="Producto"></p:link>
+                                
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="login.xhtml">Ingresar</a>
+                                
+                                <p:link class="nav-link" outcome="login" value="Ingresar"></p:link>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="carrito.xhtml">Mi carrito</a>
+                                
+                                <p:link class="nav-link" outcome="carrito" value="Mi carrito"></p:link>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="loginAdmin.xhtml">Panel Administrador</a>
+                                
+                                <p:link  class="nav-link" outcome="login" value="Panel Administrador"></p:link>
                             </li>
                         </ul>
                     </div>
