--- a/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
+++ b/src/main/webapp/WEB-INF/facelets/templates/header.xhtml
@@ -11,7 +11,7 @@
             <!-- Navigation -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
-                     <p:link class="navbar-brand" outcome="index" value="!Flores que anamoran¡"></p:link>
+                     <p:link class="navbar-brand" outcome="index" value="¡Flores que enamoran!"></p:link>
                     
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <p:link class="nav-link" outcome="productos" value="Producto"></p:link>
+                                <p:link class="nav-link" outcome="productos" value="Nuestros Productos"></p:link>
                                 
                             </li>
                             <li class="nav-item">
@@ -37,7 +37,7 @@
                             </li>
                             <li class="nav-item">
                                 
-                                <p:link  class="nav-link" outcome="login" value="Panel Administrador"></p:link>
+                                <p:link  class="nav-link" outcome="adminProductos" value="Administrar Productos"></p:link>
                             </li>
                         </ul>
                     </div>
