--- a/src/main/webapp/WEB-INF/facelets/templates/contentSide.xhtml
+++ b/src/main/webapp/WEB-INF/facelets/templates/contentSide.xhtml
@@ -9,14 +9,14 @@
 
             <div class="col-lg-3">
 
-                <h1 class="my-4">E-Florería</h1>
+                <h1 class="my-4">E-Floreria</h1>
                 <div class="list-group">
-                    <a href="productos.html" class="list-group-item">Arreglos Combinados</a>
-                    <a href="productos.html" class="list-group-item">Rosas</a>
-                    <a href="productos.html" class="list-group-item">Tulipanes</a>           
-                    <a href="productos.html" class="list-group-item">Claveles</a>
-                    <a href="productos.html" class="list-group-item">Lylis</a>
-                    <a href="productos.html" class="list-group-item">Gerberas</a>
+                    <a href="productos.xhtml" class="list-group-item">Arreglos Combinados</a>
+                    <a href="productos.xhtml" class="list-group-item">Rosas</a>
+                    <a href="productos.xhtml" class="list-group-item">Tulipanes</a>           
+                    <a href="productos.xhtml" class="list-group-item">Claveles</a>
+                    <a href="productos.xhtml" class="list-group-item">Lylis</a>
+                    <a href="productos.xhtml" class="list-group-item">Gerberas</a>
 
                 </div>
 
